# factortrace

./: .envrc  .envrc2wkuVxT  .gitignore  README.md  add_all_esrs_sections.py  add_csrd_compliance.py  add_esrs_sections.py  add_export_method.py  add_missing_methods.py  add_pdf_methods.py  all_issues_test.xhtml  analyze_pdf_handler.py  analyze_structure.py  auto_fix_critical_syntax.py  auto_tagged.xhtml  backup_flagged_files.py  bad_filing.xhtml  check_dependencies.py  check_typescript_issues.py  claude_groups.txt  clean_markdown_fences.py  cleanup_pdf_handler.py  complete_esrs_output.xml  complete_report.txt  complete_report_final.xml  complete_report_tagged.xml  complete_report_tagged_esrs.xml  complete_test.xhtml  create_perfect_pdf_handler.py  csrd_reports_20250611_031714.zip.sha256  csrd_reports_20250611_032015.zip.sha256  csrd_reports_20250611_032038.zip.sha256  csrd_reports_20250611_033333.zip.sha256  csrd_reports_20250611_033554.zip.sha256  csrd_reports_20250611_040349.zip.sha256  csrd_reports_20250611_040625.zip.sha256  debug_rules.py  deep_repair_DISABLED.py  diagnose_error.py  enhance_pdf_all_sections.py  (+106 more)
xpath31/: .env  QUICK_REFERENCE.md  README.md  __init__.py  cli.py  pyproject.toml  test.json  test_complete_esrs.sh  test_system.sh  validator.py  verify_setup.py
xpath31/api/: handlers.py
xpath31/app/: elite_integration.py  main.py  main_with_validators.py  report_generator.py  xbrl_validator.py
xpath31/clients/: esap_client.py
xpath31/compliance/: __init__.py  filing_rules.py
xpath31/config/: complete_esrs_taxonomy.yaml  efrag_csrd_taxonomy.yaml
xpath31/crypto/: __init__.py  ocsp_validator.py  oscp_validator.py  production_signer.py
xpath31/docs/: api_references.md
xpath31/pipeline/: orchestrator.py
xpath31/scripts/: diagnose_patterns.sh  export_all.sh  (+8 more)
(+1469 files in other folders)
