[tool.poetry]
name = "factortrace"
version = "0.1.0"
description = "Scope 3 compliance engine"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"  # ✅ This is now in the correct section
fastapi = "^0.111.0"
pydantic = "^2.7.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
cupy-cuda12x = { version = "^13.4.1", optional = true }
lxml = "^5.4.0"
xmlschema = "^4.1.0"
redis = "^6.2.0"
pandas = "^2.3.0"
sqlalchemy = "^2.0.41"

[tool.poetry.extras]
gpu = ["cupy-cuda12x"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.6"
black = "^24.4"
ruff = "^0.4.2"
mypy = "^1.10"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"