[tool.poetry]
name = "factortrace"
version = "0.1.0"
description = "Scope 3 compliance engine"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
lxml = "^5.4.0"
xmlschema = "^4.1.0"
redis = "^6.2.0"
pandas = "^2.3.0"
sqlalchemy = "^2.0.41"
python-multipart = "^0.0.20"
scipy = "^1.16.0"
cryptography = "^45.0.5"
asn1crypto = "^1.5.1"
requests = "^2.32.4"
click = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.6"
black = "^24.4"
ruff = "^0.4.2"
mypy = "^1.10"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
